# oproxy

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-manual.yaml  release-docker-asset.yaml  release-smoke.yaml
configs/: default.yaml
docs/: assistant.md  configuration.md  docker.md  map-local.md
examples/: custom_middleware.rs  embed_proxy.rs
src/: control_plane.rs  diff.rs  examples.rs  export.rs  har.rs  lib.rs  main.rs  redaction.rs  setup.rs  storage.rs  telemetry.rs  webhooks.rs
src/api/: mod.rs
src/certs/: mod.rs
src/config/: mod.rs
src/control_plane/: assistant.rs  assistant_action_contracts.rs  assistant_actions.rs  assistant_capabilities.yaml  assistant_compat.rs  assistant_context.rs  assistant_contracts.rs  assistant_eval_cases.yaml  assistant_payload_repair.rs  assistant_prompt.rs  assistant_provider.rs  assistant_redaction.rs  assistant_registry.rs  assistant_tools.rs  auth.rs  breakpoints.rs  error.rs  extensions.rs  forward.rs  login.rs  metrics.rs  policy.rs  sessions.rs  settings.rs  update.rs  webhooks.rs  workspace.rs
src/core/: context.rs  decompression.rs  engine.rs  engine_tests.rs  forward.rs  integration_tests.rs  massive_engine_tests.rs  mod.rs  perf_tests.rs  playback.rs
src/core/engine/: mod.rs  wire.rs
src/design/: app.jsx  assistant.jsx  compose.jsx  detail-panel.jsx  entry.jsx  package.json  sessions-table.jsx  styles.css  surfaces-extra.jsx  surfaces.jsx
src/middleware/: chain.rs  matcher.rs  mod.rs
src/middleware/plugins/: access_control.rs  breakpoints.rs  capture_filter.rs  dns_override.rs  graphql_inspector.rs  grpc_inspector.rs  header_map.rs  inspection.rs  jwt_inspector.rs  lua_engine.rs  map_local.rs  map_remote.rs  mock.rs  mod.rs  modification.rs  rewrite.rs  routing.rs  rules.rs
src/runtime/: app.rs  error.rs  listeners.rs  state.rs
src/session/: mod.rs  search.rs
src/transport/: connect.rs  context.rs  http.rs  http3.rs  mod.rs  socks5.rs  tls.rs  websocket.rs
tests/: e2e_protocol_test.py  proxy_tester.py  test_rewrites.rs
tests/browser/: global-setup.js  package.json  playwright.config.js
tests/browser/specs/: 00-beta-smoke.spec.js  01-page-load.spec.js  03-navigation.spec.js  04-traffic.spec.js  05-modals.spec.js  06-breakpoints.spec.js  07-rewrites.spec.js  08-mapping.spec.js  12-mock.spec.js  15-compose.spec.js  18-import-export.spec.js  19-session-detail.spec.js  21-sse-stream.spec.js  22-roadmap-fixes.spec.js  23-p1-workflows.spec.js  24-large-captures.spec.js  25-accessibility.spec.js  27-visual-smoke.spec.js  28-critical-controls.spec.js  29-assistant.spec.js  30-session-protocol-ctas.spec.js  helpers.js
tests/certs/: root.crt  root.key
tests/common/: mod.rs
tests/fixtures/: Dockerfile  protocol_fixtures.py  requirements.txt
