[package]
name = "oproxy"
version = "0.1.9"
edition = "2024"
build = "build.rs"
license = "MIT"
description = "Programmable HTTP/HTTPS proxy for inspecting, debugging, and manipulating network traffic"
repository = "https://github.com/sauravrao637/oproxy"

# Lint policy lives here so every contributor gets the same bar locally, not
# only in CI. `unsafe_code = "warn"` forces a documented `#[allow(unsafe_code)]`
# (with a SAFETY note) at each genuine unsafe site.
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"

[[bin]]
name = "oproxy"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = []
# HTTP/3 (QUIC) support.
http3 = ["dep:quinn", "dep:h3", "dep:h3-quinn", "dep:webpki-roots"]
# OpenTelemetry export of per-exchange protocol spans. Gates the
# per-exchange emission; the OTLP exporter layer (opentelemetry-otlp /
# tracing-opentelemetry) is attached at the logging layer when enabled.
otel = []

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "http2"] }
rcgen = "0.14"
rustls = "0.23"
tokio-rustls = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3.6"
async-trait = "0.1"
uuid = { version = "1.23", features = ["v4", "serde"] }
regex = "1.12"
# QR for the Root CA install flow. default-features off drops the heavy `image`
# (PNG) backend; we only render SVG strings.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
flate2 = "1"
brotli = "8"
zstd = "0.13"
bytes = "1"
indexmap = { version = "2", features = ["serde"] }
hyper = { version = "1.10.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "2"
futures-util = "0.3.32"
base64 = "0.22"
similar = "3"
graphql-parser = "0.4"
prost = "0.14"
http-body-util = "0.1"
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "send"] }
hmac = "0.13"
sha2 = "0.11"
time = "0.3.47"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
quinn        = { version = "0.11", optional = true }
h3           = { version = "0.0.8", optional = true }
h3-quinn     = { version = "0.0.10", optional = true }
webpki-roots = { version = "0.26", optional = true }


[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.test.package."*"]
debug = false
